

[metadata]
name = medvis
keywords=medvis
version = 0.0.1
license = "MIT license",
description = Some utilities to visualise medical images and masks
long_description = file: README.rst
author = medvis
author_email = yngve.m.moe@gmail.com
url=https://github.com/yngvem/medvis
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src





[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 88


